force-app/main/default/objects/Monthly_Managed_Service_Activity__c/Monthly_Managed_Service_Activity__c.object-meta.xml
<CustomObject>
    <label>Monthly Managed Service Activity</label>
    <nameField>
        <displayFormat>MMSA-{000000000}</displayFormat>
        <label>Monthly Managed Service Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Managed Service Activity</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>