force-app/main/default/objects/Monthly_Managed_Service_Activity__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Monthly Managed Service Activity</relationshipLabel>
    <relationshipName>Monthly_Managed_Service_Activity</relationshipName>
    <type>Lookup</type>
</CustomField>