force-app/main/default/objects/Monthly_Managed_Service_Activity__c/fields/Development_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Development_Time_Hours__c</fullName>
    <label>Development Time (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>