force-app/main/default/objects/Monthly_Managed_Service_Activity__c/fields/Monthly_Managed_Service__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Managed_Service__c</fullName>
    <label>Monthly Managed Service</label>
    <referenceTo>Monthly_Managed_Service__c</referenceTo>
    <relationshipLabel>Monthly Managed Service Activity</relationshipLabel>
    <relationshipName>Monthly_Managed_Service_Activity</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>