force-app/main/default/objects/Monthly_Managed_Service_Activity__c/fields/Who_Closed__c.field-meta.xml
<CustomField>
    <fullName>Who_Closed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Who Closed</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Monthly_Managed_Service_Activity</relationshipName>
    <type>Lookup</type>
</CustomField>