force-app/main/default/objects/Monthly_Managed_Service_Activity__c/fields/Who_Opened__c.field-meta.xml
<CustomField>
    <fullName>Who_Opened__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Who Opened</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Monthly Managed Service Activity</relationshipLabel>
    <relationshipName>Monthly_Managed_Service_Activity</relationshipName>
    <type>Lookup</type>
</CustomField>